For #7135: avoid Safari showing scrollbar is not needed

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -1520,6 +1520,9 @@ body.orbeon {
         max-width: none;
         .fb-dialog-body {
             overflow: auto;
+        }
+        .fb-dialog-keyboard-shortcuts-tables {
+            // Additional `div` added to avoid Safari showing a scrollbar when not needed
             display: flex; // Tables next to each other
         }
         .table {
